--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,13 +4,15 @@ en:
     save_changes: "Save changes"
 
   notification:
-    success: "Successfully !! , please check activate"
-    success_updated: "Profile updated !!"
-    failed: "That failed, please try again later"
-    can_not_find_user: "Can not find this user, please try again!! "
     can_not_delete: "Can not delete, please try again later !"
+    can_not_find_user: "Can not find this user, please try again!! "
+    comment_deleted: "Comment deleted"
+    failed: "That failed, please try again later"
     invalid_user: "Invalid username/password combination"
     post_deleted: "Post deleted"
+    success: "Successfully !! , please check activate"
+    success_added: "Comment successfully added"
+    success_updated: "Profile updated !!"
 
   text:
     error_text: "error"
