--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -27,14 +27,16 @@ en:
     confirmation: "Confirmation"
     contact: "Contact"
     edit_user: "Edit user"
+    follow: "Follow"
     help: "Help"
     home: "Home"
     login: "Log in"
     logout: "Log out"
     news: "News"
+    profile: "Profile"
+    settings: "Settings"
     signup: "Sign up"
     signup_now: "Sign up now!"
     update_profile: "Update your profile"
     user: "User"
     welcome_to_project: "Welcome to my project"
-
